--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -1,4 +1,4 @@
-<div style="margin-bottom: 16px;">
+<div class="border-bottom" style="margin-bottom: 16px; padding-bottom: 8px;">
   <h4
     style="color: rgb(120, 120, 120); margin-bottom: 4px;">
     {{ job['title'] }}
@@ -13,4 +13,5 @@
     {{ job['salary'] }}
   </div>
   {% endif %}
+  <button type="button" class="btn btn-outline-primary">Apply</button>
 </div>
