modified home.html to include nav.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
     </title>
   </head>
   <body>
+    {% include 'nav.html' %}
     <div class="container">
       <h1 class="text-center mt-2 mb-4">{{company_name}} Careers</h1>
       <img class="img-fluid" id="careers-banner" src="https://jovian-careers-website.houdinipapi.repl.co/static/careers.jpg" height="320" alt="careers-banner">
