--- a/templates/home.html
+++ b/templates/home.html
@@ -25,8 +25,9 @@
       </div>
       <div class="text-center">
         <button class=" btn btn-primary btn-lg">Contact Us</button>
-        <p class="mt-4">Copyright 2022. Jovian</p>
+        <p class="mt-4">Copyright 2023. Jovian</p>
         </div>
     </div>
+    {% include 'footer.html' %}
   </body>
 </html>
