--- a/templates/home.html
+++ b/templates/home.html
@@ -10,13 +10,21 @@
   </head>
   <body>
     {% include 'nav.html' %}
+     <img style="margin-bottom: 16px;" class="img-fluid" id="careers-banner" src="https://jovian-careers-website.houdinipapi.repl.co/static/careers.jpg" height="320" alt="careers-banner">
     <div class="container">
       <h1 class="text-center mt-2 mb-4">{{company_name}} Careers</h1>
-      <img class="img-fluid" id="careers-banner" src="https://jovian-careers-website.houdinipapi.repl.co/static/careers.jpg" height="320" alt="careers-banner">
-      <h2 class="text-center mt-2 mb-4">About Jovian</h2>
-      <p class="lead">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+
+      <!-- <h2 class="text-center mt-2 mb-4">About Jovian</h2> -->
+      <div class="row" style="margin-bottom: 16px;">
+      <div class="col-md-6">
+        <p class="lead">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <div class="d-none d-md-block col-md-6">
+        <img src="/static/employees.jpg" style="height: 320px; border-radius: 4px;" alt="employees">
+      </div>
+      </div>
       <h2 class="text-center mt-2 mb-4">Job Openings</h2>
       <div>
         {% for job in jobs %}
@@ -25,7 +33,7 @@
       </div>
       <div class="text-center">
         <button class=" btn btn-primary btn-lg">Contact Us</button>
-        <p class="mt-4">Copyright 2023. Jovian</p>
+        <!-- <p class="mt-4">Copyright 2023. Jovian</p> -->
         </div>
     </div>
     {% include 'footer.html' %}
