functional and aesthetic improvement

--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
         {% endfor %}
       </div>
       <div class="text-center">
-        <button class=" btn btn-primary btn-lg">Contact Us</button>
+        <a href="mailto:deyime7909@extemer.com?subject=Question%20about%20Job%20Openings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0AMy%20Question%3A%20%3Ctype%20question%20here%3E" class=" btn btn-primary btn-lg">Contact Us</a>
         <!-- <p class="mt-4">Copyright 2023. Jovian</p> -->
         </div>
     </div>
